# GDScript-formatter

./: .pre-commit-hooks.yaml  CHANGELOG.md  Cargo.toml  README.md  install.sh  tmp.gd
.github/: generate_release_notes.py
.github/workflows/: release.yml  test.yml
addons/GDQuest_GDScript_formatter/: install_and_update.gd  menu.gd  plugin.cfg  plugin.gd
benchmarks/: profile.sh
docs/: rust_coding_guidelines.md  specification_formatter.md
hooks/: pre-commit
queries/: gdscript.scm
src/: cli.rs  editorconfig.rs  formatter.rs  lib.rs  linter.rs  main.rs  node_kind.rs  parser.rs  renderer.rs  reorder.rs  safe_mode.rs
src/linter/: ignore_patterns.rs  lib.rs  query_rule.rs  regex_patterns.rs  rules.rs  tests.rs
src/linter/rules/: class_name.rs  code_order.rs  comparison_with_itself.rs  constant_name.rs  duplicated_load.rs  enum_member_name.rs  enum_name.rs  (+11 more)
tests/: cli_tests.rs  integration_tests.rs  ir_identity_tests.rs  renderer_tests.rs  reorder_tests.rs
tests/expected/: array_long_strings.gd  await.gd  blank_lines_in_class.gd  chain_call_prefix_too_long.gd  chain_lambda_arguments.gd  chain_long_arguments.gd  class_inner.gd  class_name.gd  comment_edge_cases.gd  comments.gd  comments_basic.gd  comments_indentation.gd  constructor.gd  consts.gd  container_single_indent.gd  dictionaries.gd  disabled_regions.gd  docstring.gd  docstring_semicolon.gd  enums.gd  extends_with_annotation.gd  func_args_inline_comment.gd  func_args_multiline.gd  func_multiline_calls.gd  function_annotations.gd  function_argument_lambda_comma.gd  function_parameters_type_inference.gd  function_return_types.gd  function_single_line.gd  generic_type_parameters.gd  get_node.gd  inner_class_anchors.gd  issue_175.gd  issue_217.gd  issue_278_comments_in_boolean_expression.gd  issue_284_parenthesized_is_not.gd  keyword_operators_context.gd  lambda.gd  lambda_dangling_commas.gd  lambda_multiline_blank_line.gd  (+23 more)
tests/input/: array_long_strings.gd  await.gd  blank_lines_in_class.gd  chain_call_prefix_too_long.gd  chain_lambda_arguments.gd  chain_long_arguments.gd  class_inner.gd  class_name.gd  comment_edge_cases.gd  comments.gd  comments_indentation.gd  constructor.gd  consts.gd  container_single_indent.gd  dictionaries.gd  disabled_regions.gd  docstring.gd  docstring_semicolon.gd  enums.gd  extends_with_annotation.gd  func_args_inline_comment.gd  func_args_multiline.gd  func_multiline_calls.gd  function_argument_lambda_comma.gd  function_parameters_type_inference.gd  function_return_types.gd  function_single_line.gd  generic_type_parameters.gd  issue_175.gd  issue_217.gd  issue_224.gd  issue_278_comments_in_boolean_expression.gd  issue_284_parenthesized_is_not.gd  lambda.gd  lambda_dangling_commas.gd  lambda_multiline_blank_line.gd  lambda_ternary_multiline.gd  line_continuation_indent.gd  loop_for.gd  loop_while.gd  (+17 more)
tests/manual_test_files/: .editorconfig  hello_world.gd
(+43 files in other folders)
