[package]
name = "gdscript-formatter"
version = "0.18.0"
edition = "2024"
description = "A GDScript code formatter and linter using Topiary and Tree-sitter"
license = "MIT"
repository = "https://github.com/gdquest/gdscript-formatter"
readme = "README.md"
keywords = ["godot", "gdscript", "format", "lint"]
categories = ["command-line-utilities", "development-tools"]
default-run = "gdscript-formatter"

[dependencies]
clap = { version = "4.0", features = ["derive", "wrap_help"] }
topiary-core = "0.7.0"
tree-sitter-gdscript  = { git = "https://github.com/PrestonKnopp/tree-sitter-gdscript.git", rev = "faf0de3f715a62f2c2716c86904a3f3e11c63ed8" }
regex = "1.11"
tree-sitter = "0.25.10"
rayon = "1.11.0"

[dev-dependencies]
test_each_file = "0.3.5"
similar = "2.7.0"

[features]
default = ["gdscript"]
gdscript = []

[[bin]]
name = "gdscript-formatter"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
