[package]
name = "gdscript-formatter"
version = "0.20.1"
edition = "2024"
description = "A GDScript code formatter and linter using Topiary and Tree-sitter"
license = "MIT"
repository = "https://github.com/gdquest/gdscript-formatter"
readme = "README.md"
keywords = ["godot", "gdscript", "format", "lint"]
categories = ["command-line-utilities", "development-tools"]
default-run = "gdscript-formatter"

[dependencies]
clap = { version = "=4.6.0", features = ["derive", "wrap_help"] }
topiary-core = "=0.7.3"
tree-sitter-gdscript  = { git = "https://github.com/GDQuest/tree-sitter-gdscript.git", rev = "d7cf0d60cabcd69688471891076508a4c606270f" }
regex = "=1.12.3"
tree-sitter = "=0.26.8"
rayon = "=1.11.0"

[dev-dependencies]
test_each_file = "=0.3.7"
similar = "=2.7.0"

[features]
default = ["gdscript"]
gdscript = []

[[bin]]
name = "gdscript-formatter"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
